V2 site/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  font-family: 'Open Sans', 'Raleway', sans-serif;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
  padding: 20px 0px;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

form
{
  margin: 0;
  padding: 25px 0px 0px 0px;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  width: 50%;
  float: right;
}
.header
{
  width: 100%;

  background-color: #1d3c70;
}
.header .logo img{
  width:500px;
  height:120px;
}
.container
{
  width: 1080px;
  margin: 0 auto;
}
.logo
{
  float:left;
}
.logo h1 a
{
  font-family: 'Open Sans', 'Raleway', sans-serif;
  text-decoration: none;
  color: #1C97CA;
  font-size: 40px;
  font-weight: 100;
  padding: 20px 0px;
  display: block;
  letter-spacing: 4px;
  text-transform: uppercase;

}
.menu
{
  float: right;
}
.menu ul li
{
  display: inline-block;
  padding: 30px 15px;
}
.menu ul li a
{
  float:right;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  text-decoration: none;
  color: #fff;
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 1px;
  transition:  color 0.3s ease-in;
  -moz-transition:  color 0.3s ease-in;
  -o-transition:  color 0.3s ease-in;
  -webkit-transition:  color 0.3s ease-in;
  -ms-transition: color 0.3s ease-in;
}
.menu ul li a:hover
{
  color: #1C97CA;
}

#l2{
  width: 620px;
  margin-left: 20px;
}

#l3{
  width: 620px;
  margin-left: 23px;
}

.l2{
  text-align: left;
}

.l3{
  text-align: left;
}

.banner
{
  /*background: url(images/picjumbo-bg5.png) no-repeat fixed 30% 0%/cover;*/
  background: url(images/happyman-1.jpg) no-repeat fixed 30% 0%/cover;
  padding: 90px 0px;
  cursor: default;

}
  .banner .bloco-destaque {
    width: 100%;
    color: #fff;
    padding-top: 200px;
    text-align: center;
    /*text-shadow: 1px 1px 1px rgba(0,0,0,.5);*/
    font-family: 'Open Sans', 'Raleway', sans-serif;

  }
    .banner .bloco-destaque .l1 {
      font-size: 32px;

    }
      .banner .bloco-destaque .l1 span { color: #00ccea }
    .banner .bloco-destaque .l2 {
      font-size: 50px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
    }
    .banner .bloco-destaque .l3 {
      font-size: 25px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
    }
    .p1 {
          font-size: 20px;
          padding: 16px 0px 0px 0px;
    }
    .banner .bloco-destaque .botoes {
      margin: 20px;
      font-family:  'Open Sans', 'Raleway', sans-serif;
      overflow: hidden;
    }

    .banner .bloco-destaque a.button {
      display: inline-block;
      text-decoration: none;
      padding: 16px;
      border-radius: 20px;
      margin-bottom: 16px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: white;
      width: 30%;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
 
    }

    #want-a-discount--button{
      color: #00ccea;
      float: left;
    }

    #want-a-discount--button:hover{
      color: #ffffff;
      /*border: 1px solid #f2f2f2;*/
    }

    a.button.full{
      padding: 16px 72px !important;
      font-size: 16px;
      background-color: #f2f2f2;
      border: 1px solid #FF9735;
      transition-duration: 0.1s;
      transition: all 0.2s, color 0.2s;
      animation: all spinAround 2s linear infinite;
    }

    a.button.full:hover {
      background-color: #FF9735;
      color: #ffffff;
      text-shadow: 1px 1px 1px rgba(0,0,0,.5);
      box-shadow:inset 0px 0px 0px 2px #00ccea;
      border: 1px solid #f2f2f2;
    }

.banner2
{
  background: url(images/bg2.png) no-repeat fixed 30% 10%/cover;
  cursor: default;

}

.header-text
{
  text-align:center;
  color: #fff;
  text-align: right;
}

.header-text2
{
  text-align:center;
  color: #fff;
  font-size: 40px;
    font-weight: 600;
    font-family: 'Open Sans', 'Raleway', sans-serif;
    line-height: 60px;
    
}


.big-text
{
  font-size: 30px;
  line-height: 50px;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  font-weight: 300;
  padding-right: 15%
}
.header-text h2
{
  font-size: 40px;
  font-weight: 600;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  line-height: 60px;
  padding-right: 13%;
}
.small-text
{
    text-align: center;
    margin: 10px 0 0 60%;
    font-size: 18px;
    font-family: 'Open Sans', 'Raleway', sans-serif;
    font-weight: 400;
    line-height: 40px;
    padding: 17px 40px 0px 0px;
    width: 400px;
}
}
.small-text a
{
  color: #fff;
  border-bottom: 1px dotted #fff;
  text-decoration: none;
}
.button-section ul li
{
  display: inline-block;
  margin: 50px 20px;
}

a.button.button-left {
    border: 1px solid #fff;
    padding: 16px 72px !important;


}

a.button.button-right {
    border: 1px solid #fff;
    padding: 16px 72px !important;
}

a.button.button-right:hover {
    background-color: #1d3c70;
    border: 1px solid #1d3c70;
    box-shadow:inset 0px 0px 0px 1px #1d3c70;
}

a.button.button-left:hover{
     background-color: #1d3c70;
     border: 1px solid #1d3c70;
     box-shadow:inset 0px 0px 0px 1px# 1d3c70;

}
/* ... */

